--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tasking-project</title>
+    <title>Tasking-Team-Project</title>
     <!--=============== CSS/FONTS LINKS  ===============-->
     <link rel="stylesheet" href="styles.css">
 
@@ -12,7 +12,6 @@
 
 <body>
 <!--=============== HEADER SECTION START  ===============-->
-
 <!--=============== NAVIGATION SECTION START  ===============-->
 <!--=============== NAVIGATION SECTION END  ===============-->
 
